Bug 298412 - Crash when opening a new document with custom settings
Summary: Crash when opening a new document with custom settings
Status: RESOLVED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
: 298745 299208 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-04-19 12:50 UTC by Philippe Nicloux
Modified: 2013-03-04 04:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Nicloux 2012-04-19 12:50:32 UTC
Application: krita (2.5 Alpha 1)
KDE Platform Version: 4.8.2 (4.8.2) (Compiled from sources)
Qt Version: 4.8.1
Operating System: Linux 3.0.0-17-generic x86_64
Distribution: Linux Mint 12 KDE

-- Information about the crash:
- What I was doing when the application crashed: I created a new document with a A3 300 dpi size,
and when typing "create" : crash !

(NB : the same thing happens under windows, but more often (everytime, in fact )

- Custom settings of the application: none

The crash can be reproduced some of the time.

-- Backtrace:
Application: Krita (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fd8f35bc7a0 (LWP 1523))]

Thread 5 (Thread 0x7fd8cfb94700 (LWP 1525)):
#0  0x00007fd8ee8b904c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fd8f21155ab in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007fd8f21113e4 in QSemaphore::acquire(int) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007fd8d57fddfe in KisTileDataPooler::waitForWork (this=0x1a9dbe0) at /home/filou/source-to-compile/calligra/calligra-src/krita/image/tiles3/kis_tile_data_pooler.cc:162
#4  0x00007fd8d57fe4e4 in KisTileDataPooler::run (this=0x1a9dbe0) at /home/filou/source-to-compile/calligra/calligra-src/krita/image/tiles3/kis_tile_data_pooler.cc:184
#5  0x00007fd8f211509b in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#6  0x00007fd8ee8b4efc in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#7  0x00007fd8f0e0959d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#8  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fd8cf393700 (LWP 1526)):
#0  0x00007fd8ee8b904c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/x86_64-linux-gnu/libpthread.so.0
#1  0x00007fd8f21155ab in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#2  0x00007fd8f2111829 in QSemaphore::tryAcquire(int, int) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#3  0x00007fd8d581f09a in KisTileDataSwapper::run (this=0x1a9dc18) at /home/filou/source-to-compile/calligra/calligra-src/krita/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#4  0x00007fd8f211509b in ?? () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#5  0x00007fd8ee8b4efc in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
#6  0x00007fd8f0e0959d in clone () from /lib/x86_64-linux-gnu/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fd8c77fe700 (LWP 1531)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007fd8c77fdad0 in ?? ()
#2  0x00007fff36aad7e7 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 2 (Thread 0x7fd8c7fff700 (LWP 1535)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007fd8c7ffead0 in ?? ()
#2  0x00007fff36aad7e7 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 1 (Thread 0x7fd8f35bc7a0 (LWP 1523)):
[KCrash Handler]
#6  count (this=0x5d) at /usr/include/qt4/QtCore/qvector.h:259
#7  KoColorSet::nColors (this=0x25) at /home/filou/source-to-compile/calligra/calligra-src/libs/pigment/resources/KoColorSet.cpp:124
#8  0x00007fd8de207418 in KoColorSetWidget::KoColorSetWidgetPrivate::fillColors (this=0x7fd8ad1a6cd0) at /home/filou/source-to-compile/calligra/calligra-src/libs/widgets/KoColorSetWidget.cpp:85
#9  0x00007fd8de2078ac in KoColorSetWidget::setColorSet (this=0x7fd8ad1a6740, colorSet=0x25) at /home/filou/source-to-compile/calligra/calligra-src/libs/widgets/KoColorSetWidget.cpp:245
#10 0x00007fd8de206e4e in KoColorPopupAction::KoColorPopupAction (this=0x7fd8ad1a37d0, parent=<optimized out>) at /home/filou/source-to-compile/calligra/calligra-src/libs/widgets/KoColorPopupAction.cpp:84
#11 0x00007fd8c359fa8a in DigitalMixerDock::DigitalMixerDock (this=0x7fd8abe357f0) at /home/filou/source-to-compile/calligra/calligra-src/krita/plugins/extensions/dockers/digitalmixer/digitalmixer_dock.cc:79
#12 0x00007fd8c359e90e in DigitalMixerDockFactory::createDockWidget (this=0x3e7b1d0) at /home/filou/source-to-compile/calligra/calligra-src/krita/plugins/extensions/dockers/digitalmixer/digitalmixer.cc:63
#13 0x00007fd8ded50b19 in KoMainWindow::createDockWidget (this=0x4094db0, factory=0x3e7b1d0) at /home/filou/source-to-compile/calligra/calligra-src/libs/main/KoMainWindow.cpp:1831
#14 0x00007fd8ded70d79 in KoView::KoView (this=0x7fd8b3cbbf70, __vtt_parm=<optimized out>, document=0x4094390, parent=<optimized out>, __in_chrg=<optimized out>) at /home/filou/source-to-compile/calligra/calligra-src/libs/main/KoView.cpp:186
#15 0x00007fd8d5da0e4f in KisView2::KisView2 (this=0x7fd8b3cbbf70, doc=0x4094390, parent=0x4094db0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /home/filou/source-to-compile/calligra/calligra-src/krita/ui/kis_view2.cpp:220
#16 0x00007fd8d5d2b616 in KisDoc2::createViewInstance (this=0x4094390, parent=0x4094db0) at /home/filou/source-to-compile/calligra/calligra-src/krita/ui/kis_doc2.cc:424
#17 0x00007fd8ded21e1a in KoDocument::createView (this=0x4094390, parent=<optimized out>) at /home/filou/source-to-compile/calligra/calligra-src/libs/main/KoDocument.cpp:439
#18 0x00007fd8ded517bf in KoMainWindow::setRootDocument (this=0x4094db0, doc=0x4094390) at /home/filou/source-to-compile/calligra/calligra-src/libs/main/KoMainWindow.cpp:455
#19 0x00007fd8ded27aca in deleteOpenPane (this=0x4094390, closing=<optimized out>) at /home/filou/source-to-compile/calligra/calligra-src/libs/main/KoDocument.cpp:2740
#20 KoDocument::deleteOpenPane (this=0x4094390, closing=<optimized out>) at /home/filou/source-to-compile/calligra/calligra-src/libs/main/KoDocument.cpp:2733
#21 0x00007fd8f2228381 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#22 0x00007fd8d5e1f07d in KisCustomImageWidget::createImage (this=0x4b2f140) at /home/filou/source-to-compile/calligra/calligra-src/krita/ui/widgets/kis_custom_image_widget.cc:234
#23 0x00007fd8f2228381 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#24 0x00007fd8f1c26a02 in QAbstractButton::clicked(bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#25 0x00007fd8f196443e in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#26 0x00007fd8f196577b in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#27 0x00007fd8f19659ec in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#28 0x00007fd8f15e9af4 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#29 0x00007fd8f15992e4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#30 0x00007fd8f159eb0f in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#31 0x00007fd8f2fa7bf6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#32 0x00007fd8f2213f9c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#33 0x00007fd8f159a2b2 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#34 0x00007fd8f1616955 in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#35 0x00007fd8f161580a in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#36 0x00007fd8f163f25a in ?? () from /usr/lib/x86_64-linux-gnu/libQtGui.so.4
#37 0x00007fd8f2212d82 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#38 0x00007fd8f2212fd7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#39 0x00007fd8f2218067 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
#40 0x00007fd8df1f020d in kdemain (argc=<optimized out>, argv=<optimized out>) at /home/filou/source-to-compile/calligra/calligra-src/krita/main.cc:71
#41 0x0000000000408547 in _start ()

Reported using DrKonqi
Comment 1 Halla Rempt 2012-04-19 12:55:51 UTC
I've seen this happen before as well.
Comment 2 Halla Rempt 2012-04-19 12:56:03 UTC
Even in apps like words
Comment 3 Halla Rempt 2012-04-19 13:10:10 UTC
Git commit e909cb9a57b70a1c3aa846972e6d1232ba2f9b0f by Boudewijn Rempt.
Committed on 19/04/2012 at 15:09.
Pushed by rempt into branch 'master'.

Guard KoColorSet with QPointer

This makes sure that if the colorset the popup action refers to is
deleted or invalid, we don't get crashes

M  +7    -5    libs/widgets/KoColorPopupAction.cpp
M  +2    -1    libs/widgets/KoColorSetWidget.cpp

http://commits.kde.org/calligra/e909cb9a57b70a1c3aa846972e6d1232ba2f9b0f
Comment 4 Philippe Nicloux 2012-04-20 06:56:03 UTC
Le 19/04/2012 14:56, Boudewijn Rempt a écrit :
> https://bugs.kde.org/show_bug.cgi?id=298412
>
> --- Comment #2 from Boudewijn Rempt<boud@valdyas.org>  ---
> Even in apps like words
>
Hi Boud,
I was wondering : As I sayed, this crash happens in the same conditions 
than this old bugs under Windows you deleted some times ago. I mean, 
crash when creating a new document with non-default size parameters. Do 
you think it could be solved under Windows the same way you solved it 
under Linux ?
Comment 5 Halla Rempt 2012-04-20 07:01:52 UTC
I don't know... I'll make a new unstable installer for windows this weekend in any case so you could try :-)
Comment 6 Philippe Nicloux 2012-04-20 07:11:01 UTC
Le 20/04/2012 09:01, Boudewijn Rempt a écrit :
> https://bugs.kde.org/show_bug.cgi?id=298412
>
> --- Comment #5 from Boudewijn Rempt<boud@valdyas.org>  ---
> I don't know... I'll make a new unstable installer for windows this weekend in
> any case so you could try :-)
>
Thanks !
Comment 7 Camilla Boemann 2012-04-21 08:05:38 UTC
Git commit d6bd767c8ef3c6db2c8893709ee99f99f02883e9 by C. Boemann, on behalf of Boudewijn Rempt.
Committed on 19/04/2012 at 15:09.
Pushed by boemann into branch 'tuneKoUnitAPI'.

Guard KoColorSet with QPointer

This makes sure that if the colorset the popup action refers to is
deleted or invalid, we don't get crashes

M  +7    -5    libs/widgets/KoColorPopupAction.cpp
M  +2    -1    libs/widgets/KoColorSetWidget.cpp

http://commits.kde.org/calligra/d6bd767c8ef3c6db2c8893709ee99f99f02883e9
Comment 8 Philippe Nicloux 2012-04-23 07:19:47 UTC
Le 19/04/2012 14:56, Boudewijn Rempt a écrit :
> https://bugs.kde.org/show_bug.cgi?id=298412
>
> --- Comment #2 from Boudewijn Rempt<boud@valdyas.org>  ---
> Even in apps like words
>
Hi Boud,
I just tried the windows unstable install, nothing has changed.
I would like to print a backtrace of the crash under windows, but Krita 
ask me "kdbgwin".  It is a Linux app, or do you know if there is a 
windows version ?
Comment 9 Halla Rempt 2012-04-23 07:34:48 UTC
I actually didn't have time this weekend to make a new windows installer with the fix in :-(.  When I do, I'll try to package kdbgwin as well.
Comment 10 Philippe Nicloux 2012-04-23 07:38:09 UTC
Le 23/04/2012 09:34, Boudewijn Rempt a écrit :
> https://bugs.kde.org/show_bug.cgi?id=298412
>
> --- Comment #9 from Boudewijn Rempt<boud@valdyas.org>  ---
> I actually didn't have time this weekend to make a new windows installer with
> the fix in :-(.  When I do, I'll try to package kdbgwin as well.
>
Oh, ok ! Thanks for... everything !
Comment 11 Halla Rempt 2012-04-23 13:34:28 UTC
Okay, a new msi is up for download, and this time it should include kdbgwin.exe -- but I'm sure (totally sure!) that this bug is fixed :-). /me crosses fingers.
Comment 12 Philippe Nicloux 2012-04-23 14:16:11 UTC
Le 23/04/2012 15:34, Boudewijn Rempt a écrit :
> https://bugs.kde.org/show_bug.cgi?id=298412
>
> --- Comment #11 from Boudewijn Rempt<boud@valdyas.org>  ---
> Okay, a new msi is up for download, and this time it should include kdbgwin.exe
> -- but I'm sure (totally sure!) that this bug is fixed :-). /me crosses
> fingers.
>
Yeeeeees, Fatality, you win  !
I can open a document, and draw under windows.
  Whow, it's good !
Till the next one.
Thanks !
Comment 13 Halla Rempt 2012-04-23 15:08:02 UTC
On Monday 23 April 2012 Apr, Philippe Nicloux wrote:
> https://bugs.kde.org/show_bug.cgi?id=298412
> 
> --- Comment #12 from Philippe Nicloux <phil.nicloux@neuf.fr> ---
> Le 23/04/2012 15:34, Boudewijn Rempt a écrit :
> > https://bugs.kde.org/show_bug.cgi?id=298412
> >
> > --- Comment #11 from Boudewijn Rempt<boud@valdyas.org>  ---
> > Okay, a new msi is up for download, and this time it should include kdbgwin.exe
> > -- but I'm sure (totally sure!) that this bug is fixed :-). /me crosses
> > fingers.
> >
> Yeeeeees, Fatality, you win  !
> I can open a document, and draw under windows.
>   Whow, it's good !
> Till the next one.

Yes :-). Bug reports always welcome!
Comment 14 Philippe Nicloux 2012-04-24 06:40:10 UTC
Le 23/04/2012 17:08, Boudewijn Rempt a écrit :
> https://bugs.kde.org/show_bug.cgi?id=298412
>
> --- Comment #13 from Boudewijn Rempt<boud@valdyas.org>  ---
> On Monday 23 April 2012 Apr, Philippe Nicloux wrote:
>> https://bugs.kde.org/show_bug.cgi?id=298412
>>
>> --- Comment #12 from Philippe Nicloux<phil.nicloux@neuf.fr>  ---
>> Le 23/04/2012 15:34, Boudewijn Rempt a écrit :
>>> https://bugs.kde.org/show_bug.cgi?id=298412
>>>
>>> --- Comment #11 from Boudewijn Rempt<boud@valdyas.org>   ---
>>> Okay, a new msi is up for download, and this time it should include kdbgwin.exe
>>> -- but I'm sure (totally sure!) that this bug is fixed :-). /me crosses
>>> fingers.
>>>
>> Yeeeeees, Fatality, you win  !
>> I can open a document, and draw under windows.
>>    Whow, it's good !
>> Till the next one.
> Yes :-). Bug reports always welcome!
>
Hi Boud, good morning,
I have just understand something about the crash : it happens again, but 
only if I copy ressource files ( brushes, palettes...) directly in the 
Krita/share/apps/krita files.
Hope it can help.
Comment 15 Halla Rempt 2012-04-27 09:43:36 UTC
Outch, reopening then.
Comment 16 Halla Rempt 2012-04-27 09:45:26 UTC
Git commit 36a4964b13cb1e7087e4d5ca5f576ca13e58bb45 by Boudewijn Rempt.
Committed on 19/04/2012 at 15:09.
Pushed by rempt into branch 'calligra/2.4'.

Guard KoColorSet with QPointer

This makes sure that if the colorset the popup action refers to is
deleted or invalid, we don't get crashes

M  +7    -5    libs/widgets/KoColorPopupAction.cpp
M  +2    -1    libs/widgets/KoColorSetWidget.cpp

http://commits.kde.org/calligra/36a4964b13cb1e7087e4d5ca5f576ca13e58bb45
Comment 17 Marius Cirsta 2012-05-02 18:08:40 UTC
*** Bug 298745 has been marked as a duplicate of this bug. ***
Comment 18 Jekyll Wu 2013-03-04 04:02:17 UTC
*** Bug 299208 has been marked as a duplicate of this bug. ***