Guard KoColorSet with QPointer

This makes sure that if the colorset the popup action refers to is
deleted or invalid, we don't get crashes

BUG:298412